tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari
struct Bad {
  value: has serialize() -> String,
}

fn main() -> i64 {
  return 0;
}
